--- a/README
+++ b/README
@@ -7,3 +7,6 @@ This is a modified extension to automatically download subtitles.
 
 Will add more languages upon request.
 Currently this extension is intended for personal use.
+
+Main article:
+http://dev.kafol.net/2011/07/automatically-download-subtitles-in-vlc.html
