--- a/README
+++ b/README
@@ -5,6 +5,12 @@ You can write VideoLAN VLC player's extensions in LUA programming language. Exte
 This is a modified extension to automatically download subtitles. 
 
 
+IMPORTANT:
+*Only works up to version 2.0.8.*
+Due to undocumented changes in VLC 2.1.x, the subtitle loading function is broken (forced relative path).
+http://www.videolan.org/vlc/releases/2.0.8.html
+
+
 Will add more languages upon request.
 Currently this extension is intended for personal use.
 
